--- a/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj.filters
+++ b/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="csvReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TrabalhoOpenGL.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="csvReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
