--- a/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj
+++ b/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="csvReader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="csvReader.cpp" />
