--- a/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj.filters
+++ b/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="csvReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
