--- a/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj
+++ b/TrabalhoOpenGL/TrabalhoOpenGL.vcxproj
@@ -88,12 +88,12 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\tio\Documents\gl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\gl\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\tio\Documents\gl\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\gl\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
